Trying to fix flight-time/flight-number layout bug.
Screens with CSS resolution 320px wide and smaller are ‘dropping’ the
flight number inline-block or the flight time inline-block.

--- a/static/css/style.2015-05-08-2.css
+++ b/static/css/style.2015-05-08-2.css
@@ -105,7 +105,7 @@ ul.flashes li {
   font-weight: 400;
   color: #42a5f5;
   text-align: right;
-  width: 100px;
+  width: 95px;
 }
 @media only screen and (min-width: 992px) {
     .flight.dep_time {
@@ -117,7 +117,7 @@ ul.flashes li {
   font-size: 1.2rem;
   font-weight: 300;
   text-align: center;
-  width: 55%;
+  width: 50%;
 }
 .canceled {
   color: red;
